--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Poppins', sans-serif;
+}
 *{
     padding: 0;
     margin: 0;
@@ -56,7 +59,7 @@ header{
 }
 .navbar a:hover{
     color: #ff702a;
-    transition: .8s ;
+    transition: .2s ;
 }
 #menu-icon{
     font-size: 2rem;
@@ -267,7 +270,7 @@ section{
     justify-content: center;
     font-size: 1.5rem;
     border-radius: 45%;
-    transition: .8s;
+    transition: .3s;
 }
 .col .social a:hover{
     transform: scale(1.2);
@@ -293,7 +296,7 @@ section{
     }
     header .navbar{
         position: absolute;
-        top: 0;
+        top: -400px;
         left: 0;
         right: 0;
         display: flex;
